--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "doc": "docs"
   },
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -15,5 +16,8 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mysql": "^2.18.1"
+  },
+  "engines": {
+    "node": "14.x"
   }
 }
